*
* 2.1.1
*

- XEN monitoring subagent
- Fixed issues with agent tunnels
- Fixed bug in STP-based topology discovery
- Fixed unrestricted node poller queue growth when discovery from SNMP traps or syslog is on
- Server's database password can be supplied by external tool
- Fixed OpenBSD compatibility issues
- Correct handling of "dormant" and "not present" interface operational states
- NXSL:
	- New class "InetAddress"
	- New attribute "ipAddressList" for class "Interface"
	- New method "enableRoutingTablePolling" in class "Node"
- Management console:
	- Improved status map
	- Fixed bug in sorting alarms by zone name
- Fixed issues: NX-930, NX-1143, NX-1170, NX-1263, NX-1272, NX-1273, NX-1278, NX-1281, NX-1284, NX-1285, NX-1286


*
* 2.1
*

- Improved audit logging
- Improved data reconciliation between agent and server
- Improved Grafana integration
- Server detects changes in installed packages during configuration poll
- Added MariaDB database driver
- Fixed excessive CPU usage by agent on AIX
- nxshell can connect to server on non-standard port
- Driver for Netonix switches
- NXSL:
	- New methods for arrays: append, insert, pop, push, remove
	- Table methods get and set can accept column name instead of column index
	- Table row method get can accept column name instead of column index
	- Added table row method set
	- Access to DCI owner object in data collection and instance discovery scripts via $targetObject variable
- Management console:
	- Improved layout of dashboard elements
	- Added option to indicate alarm severity with background color in alarm list
	- Fixed bug in folder download in file manager
	- Proper support for ANSI colors in object tools output in web UI
	- Object dragging on map disabled if user don't have write access to map object
	- Option to hide sub-interfaces in UI (currently works only for Juniper switches)