@@ -9,6 +9,7 @@
 - Server's database password can be supplied by external tool
 - Fixed OpenBSD compatibility issues
 - Correct handling of "dormant" and "not present" interface operational states
+- Syslog messages received on loopback bound to receiving node (local management node or syslog proxy node)
 - NXSL:
 	- New class "InetAddress"
 	- New attribute "ipAddressList" for class "Interface"
